--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
-  "name": "remix-redis-session",
-  "version": "0.0.12",
-  "description": "Redis session storage for Remix",
-  "main": "dist/index.js",
-  "files": [
-    "dist/**"
-  ],
-  "scripts": {
-    "build": "npx tsc"
-  },
-  "author": "Dov Alperin",
-  "repository": "https://github.com/DAlperin/remix-redis-session",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/ioredis": "^4.28.8",
-    "typescript": "^4.6.2"
-  },
-  "dependencies": {
-    "@remix-run/node": "^1.6.3",
-    "@remix-run/server-runtime": "^1.6.3",
-    "ioredis": "^4.28.5",
-    "remix": "^1.3.3"
-  }
+    "name": "remix-redis-session",
+    "version": "0.0.12",
+    "description": "Redis session storage for Remix",
+    "main": "dist/index.js",
+    "files": [
+        "dist/**"
+    ],
+    "scripts": {
+        "build": "npx tsc"
+    },
+    "author": "Dov Alperin",
+    "repository": "https://github.com/bogh/react-router-redis-session",
+    "license": "MIT",
+    "devDependencies": {
+        "@types/ioredis": "^4.28.8",
+        "typescript": "^4.6.2"
+    },
+    "dependencies": {
+        "ioredis": "^4.28.5",
+        "react-router": "^7.5.0",
+        "remix": "^1.3.3"
+    }
 }
